feat(sample): update sample to be eShopOnContainers like
