# docs/waystone-sample-api-swagger.json
@@ -7,50 +7,14 @@
     "version": "v1"
   },
   "paths": {
-    "/weatherforecast": {
+    "/products": {
       "get": {
         "tags": [
-          "WeatherForecast"
+          "Products"
         ],
-        "summary": "Gets a set of weather forecasts.",
-        "operationId": "WeatherForecast_Get",
+        "summary": "List a page of products.",
+        "operationId": "Products_List",
         "parameters": [
-          {
-            "name": "DesiredSummary",
-            "in": "query",
-            "description": "When specified, the weather forecasts found will only have the specified summary.",
-            "schema": {
-              "nullable": true,
-              "oneOf": [
-                {
-                  "$ref": "#/components/schemas/ForecastSummary"
-                }
-              ]
-            },
-            "x-position": 1
-          },
-          {
-            "name": "MinimumTemperatureC",
-            "in": "query",
-            "description": "When specified, the weather forecasts found will all have TemperatureC above this value.",
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "nullable": true
-            },
-            "x-position": 2
-          },
-          {
-            "name": "MaximumTemperatureC",
-            "in": "query",
-            "description": "When specified, the weather forecasts found will all have TemperatureC below this value.",
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "nullable": true
-            },
-            "x-position": 3
-          },
           {
             "name": "Limit",
             "in": "query",
@@ -60,7 +24,7 @@
               "format": "int32",
               "example": 10
             },
-            "x-position": 4
+            "x-position": 1
           },
           {
             "name": "Cursor",
@@ -71,7 +35,7 @@
               "format": "int32",
               "example": 0
             },
-            "x-position": 5
+            "x-position": 2
           },
           {
             "name": "X-Correlation-ID",
@@ -106,11 +70,74 @@
             }
           },
           "200": {
-            "description": "The paginated list of WeatherForecastDto.",
+            "description": "A paginated response of products.",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/PaginatedResponseOfWeatherForecastDto"
+                  "$ref": "#/components/schemas/PaginatedResponseOfProductDto"
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "Adds a new product.",
+        "operationId": "Products_Add",
+        "parameters": [
+          {
+            "name": "X-Correlation-ID",
+            "in": "header",
+            "description": "The correlation id to be associated with the request. One will be generated by the API if not provided.",
+            "schema": {
+              "type": "string",
+              "format": "guid",
+              "example": "72b264f5-d6e9-4e74-a6ce-d398e2c8421a"
+            }
+          }
+        ],
+        "requestBody": {
+          "x-name": "request",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateProductCommand"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "400": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFoundProblemDetails"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnknownProblemDetails"
+                }
+              }
+            }
+          },
+          "201": {
+            "description": "The created product.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProductDto"
                 }
               }
             }
@@ -118,19 +145,19 @@
         }
       }
     },
-    "/weatherforecast/{id}": {
+    "/products/{id}": {
       "get": {
         "tags": [
-          "WeatherForecast"
+          "Products"
         ],
-        "summary": "Gets a weather forecast by it's id.",
-        "operationId": "WeatherForecast_GetById",
+        "summary": "Gets a product using it's ID.",
+        "operationId": "Products_GetById",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "description": "The id of the forecast.",
+            "description": "The ID of the product.",
             "schema": {
               "type": "string",
               "format": "guid"
@@ -170,14 +197,67 @@
             }
           },
           "200": {
-            "description": "The WeatherForecastDto",
+            "description": "The product corresponding to the provided ID.",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WeatherForecastDto"
+                  "$ref": "#/components/schemas/ProductDto"
                 }
               }
             }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Products"
+        ],
+        "operationId": "Products_Delete",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "guid"
+            },
+            "x-position": 1
+          },
+          {
+            "name": "X-Correlation-ID",
+            "in": "header",
+            "description": "The correlation id to be associated with the request. One will be generated by the API if not provided.",
+            "schema": {
+              "type": "string",
+              "format": "guid",
+              "example": "72b264f5-d6e9-4e74-a6ce-d398e2c8421a"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFoundProblemDetails"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnknownProblemDetails"
+                }
+              }
+            }
+          },
+          "204": {
+            "description": ""
           }
         }
       }
@@ -259,7 +339,7 @@
           }
         ]
       },
-      "PaginatedResponseOfWeatherForecastDto": {
+      "PaginatedResponseOfProductDto": {
         "type": "object",
         "description": "Represents a page of records.",
         "additionalProperties": false,
@@ -283,7 +363,7 @@
             "type": "array",
             "description": "The current page of records.",
             "items": {
-              "$ref": "#/components/schemas/WeatherForecastDto"
+              "$ref": "#/components/schemas/ProductDto"
             }
           }
         }
@@ -313,68 +393,59 @@
           }
         }
       },
-      "WeatherForecastDto": {
+      "ProductDto": {
         "type": "object",
-        "description": "A weather forecast.",
         "additionalProperties": false,
         "properties": {
           "id": {
             "type": "string",
-            "description": "The id of the forecast.",
             "format": "guid"
           },
-          "temperatureC": {
-            "type": "integer",
-            "description": "The temperature in Celsius.",
-            "format": "int32"
+          "name": {
+            "type": "string"
           },
-          "temperatureF": {
-            "type": "integer",
-            "description": "The temperature in Fahrenheit.",
-            "format": "int32"
+          "description": {
+            "type": "string"
           },
-          "summary": {
-            "description": "The summary of the forecast.",
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/ForecastSummary"
-              }
-            ]
+          "amountExcludingTax": {
+            "type": "number",
+            "format": "decimal"
           },
-          "dateTime": {
-            "type": "string",
-            "description": "The date of the forecast.",
-            "format": "date-time"
+          "tax": {
+            "type": "number",
+            "format": "decimal"
+          },
+          "total": {
+            "type": "number",
+            "format": "decimal"
           }
         }
       },
-      "ForecastSummary": {
-        "type": "string",
-        "description": "",
-        "x-enumNames": [
-          "Freezing",
-          "Bracing",
-          "Chilly",
-          "Cool",
-          "Mild",
-          "Warm",
-          "Balmy",
-          "Hot",
-          "Sweltering",
-          "Scorching"
-        ],
-        "enum": [
-          "Freezing",
-          "Bracing",
-          "Chilly",
-          "Cool",
-          "Mild",
-          "Warm",
-          "Balmy",
-          "Hot",
-          "Sweltering",
-          "Scorching"
-        ]
+      "CreateProductCommand": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "amountExcludingTax": {
+            "type": "number",
+            "format": "decimal"
+          },
+          "taxPercentage": {
+            "type": "number",
+            "format": "decimal"
+          },
+          "discountPercentage": {
+            "type": "number",
+            "format": "decimal",
+            "nullable": true
+          }
+        }
       }
     }
   }
